provider side almost completed

--- a/assets/css/Inputs.css
+++ b/assets/css/Inputs.css
@@ -4,10 +4,10 @@
     /*margin-bottom: 2rem;*/
     text-shadow:  0.188rem 0.188rem 0.313rem #999;
 }
-
+/*
 label{
     margin-top:1rem;
-}
+}*/
 
 .inputs-container {
     align-content: center;
