--- a/assets/css/Menu.css
+++ b/assets/css/Menu.css
@@ -37,3 +37,32 @@
     vertical-align: middle;
     line-height: normal;
 }
+
+#beta-notify{
+    display: inline-block;
+    vertical-align: middle;
+    width: 100%;
+    background-color: red;
+    color: #EDFB41;
+    font-weight: bold;
+    text-align: center;
+}
+
+#develop-area{
+    display: inline-block;
+    background: repeating-linear-gradient(
+    -45deg,
+    #363636,
+    #363636 1rem,
+    #FFE13A 1rem,
+    #FFE13A 2rem
+    );
+    color:darkred;
+    width: 100%;
+    vertical-align: middle;
+    font-weight: bold;
+    text-align: center;
+    -webkit-text-stroke-width: 0.08rem;
+    -webkit-text-stroke-color: #FFF;
+    font-size: 1.5rem;
+}
